--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -1,10 +1,35 @@
 <h3>Lecture</h3>
 
-<%=@lecture.title %><br>
-<%=@lecture.description %><br>
+<%= link_to 'add text content', new_lecture_text_content_path(@lecture) %><br>
+<%= link_to 'add image content', new_lecture_image_path(@lecture)%><br>
 
 
-<%= link_to 'add text content', new_lecture_text_path(@lecture)%>
+
+<br>
+Title:<%=@lecture.title %><br>
+Description:<%=@lecture.description %><br>
+
+<hr>
+<table>
+<% @lecture.text_contents.each do |text| %>
+
+    <tr>
+
+      <td>
+          <%= text.title %> | <%=link_to "Show", lecture_text_content_path(text) %><br>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= text.text_content.html_safe %><br>
+        <hr>
+      </td>
+    </tr>
+
+<% end %>
+</table>
+
+
 
 <br>
 <%= link_to 'Back', lectures_path %>
