--- a/app/views/text_contents/show.html.erb
+++ b/app/views/text_contents/show.html.erb
@@ -1,3 +1,7 @@
+<br><br>
+
+<div>
 <%=@text_content.title %><br>
 
-<%=@text_content.text_content %>
+<%=@text_content.text_content.html_safe %>
+</div>
