--- a/app/views/lectures/new.html.erb
+++ b/app/views/lectures/new.html.erb
@@ -11,6 +11,11 @@
     <%= f.text_field :description %>
   </div>
 
+  <div>
+    <%= f.label :content %><br />
+    <%= f.rich_text_area :content %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Create" %>
   </div>
