--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Lectures#index</h1>
 <p>Find me in app/views/lectures/index.html.erb</p>
-
+<%= link_to 'New Lecture', new_lecture_path %>
 
 <table>
   <% @lectures.each do |lec| %>
